--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
         .flight-info {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             margin-bottom: 20px;
         }
         .flight-info div {
             text-align: center;
+            flex: 1;
         }
         .code {
             font-size: 32px;
@@ -114,6 +116,21 @@
             margin-top: 20px;
             font-size: 24px;
         }
+        .directions {
+            text-align: center;
+            margin-top: 10px;
+        }
+        .directions a {
+            color: #1a237e;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        @media (max-height: 700px) {
+            .container {
+                height: 100%;
+                border-radius: 0;
+            }
+        }
     </style>
 </head>
 <body>
@@ -131,6 +148,11 @@
                     <div class="date">4th Aug, 2024</div>
                     <div class="time">12:00pm</div>
                 </div>
+                <div class="airplane">
+                    <svg viewBox="0 0 24 24" fill="#1a237e">
+                        <path d="M21 16v-2l-8-5V3.5c0-.83-.67-1.5-1.5-1.5S10 2.67 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z"/>
+                    </svg>
+                </div>
                 <div>
                     <div class="code">AWL</div>
                     <div class="city">Avyaan's Wonderland</div>
@@ -138,22 +160,21 @@
                     <div class="time">04:00pm</div>
                 </div>
             </div>
-            <div class="airplane">
-                <svg viewBox="0 0 24 24" fill="#1a237e">
-                    <path d="M21 16v-2l-8-5V3.5c0-.83-.67-1.5-1.5-1.5S10 2.67 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z"/>
-                </svg>
-            </div>
             <div class="passenger-info">
                 <p><span>Passenger:</span> <span id="passengerName"></span></p>
                 <p><span>Flight:</span> <span>AJ307</span></p>
                 <p><span>Terminal:</span> <span>M3M, Golfestate</span></p>
-                <p><span>Gate:</span> <span>First Floor</span></p>
-                <p><span>VIP Club:</span> <span>First Floor</span></p>
-                <p><span>Boarding Time:</span> <span>12:00 PM</span></p>
+                <p><span>Gate:</span> <span>First Floor, VIP Club</span></p>
+                <p><span>Take off:</span> <span>12:00 PM</span></p>
+                <p><span>Landing:</span> <span>4:00 PM</span></p>
             </div>
             <div class="barcode">
                 ||||| |||| ||||| |||| |||||
             </div>
+            <div class="directions">
+                <a href="https://g.co/kgs/e5oBwti" target="_blank">Get Directions</a>
+            </div>
+            <button onclick="editName()">Edit Name</button>
         </div>
     </div>
 
@@ -164,6 +185,14 @@
                 document.getElementById('passengerName').textContent = name;
                 document.getElementById('initialScreen').style.display = 'none';
                 document.getElementById('boardingPass').style.display = 'flex';
+            }
+        }
+
+        function editName() {
+            const currentName = document.getElementById('passengerName').textContent;
+            const newName = prompt("Enter new name:", currentName);
+            if (newName) {
+                document.getElementById('passengerName').textContent = newName;
             }
         }
     </script>
