--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Avyaan's Adventure Boarding Pass</title>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
+    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <style>
         body, html {
             height: 100%;
@@ -15,21 +15,15 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #ffffff;
-        }
-        .outer-container {
-            width: 100%;
-            max-width: 400px;
-            height: 90vh;
-            max-height: 800px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #ffffff;
+            background-color: #f0f0f0;
+            background-image: radial-gradient(#1a237e 2px, transparent 2px);
+            background-size: 30px 30px;
         }
         .container {
             width: 90%;
-            height: 90%;
+            max-width: 350px;
+            height: 90vh;
+            max-height: 700px;
             background-color: #1a237e;
             border-radius: 20px;
             overflow: hidden;
@@ -56,9 +50,9 @@
             display: none;
         }
         h1 {
-            font-size: 28px;
+            font-size: 32px;
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 40px;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
         }
         input {
@@ -103,11 +97,11 @@
             flex: 1;
         }
         .code {
-            font-size: 32px;
+            font-size: 36px;
             font-weight: bold;
         }
         .city {
-            font-size: 16px;
+            font-size: 18px;
             font-weight: bold;
         }
         .date, .time {
@@ -124,7 +118,7 @@
             50% { transform: translateY(-10px); }
         }
         .airplane svg {
-            width: 50px;
+            width: 60px;
             height: auto;
         }
         .passenger-info {
@@ -139,13 +133,9 @@
         .passenger-info p span:first-child {
             font-weight: bold;
         }
-        .qr-code {
+        #qrcode {
             text-align: center;
             margin-top: 20px;
-        }
-        .qr-code img {
-            width: 100px;
-            height: 100px;
         }
         .directions {
             text-align: center;
@@ -156,64 +146,54 @@
             text-decoration: none;
             font-weight: bold;
         }
-        .travel-icons {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 20px;
-        }
-        .travel-icon {
-            font-size: 24px;
+        @media (max-height: 700px) {
+            .container {
+                height: 100%;
+                border-radius: 0;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="outer-container">
-        <div class="container">
-            <div class="initial-screen" id="initialScreen">
-                <h1>AVYAAN'S ADVENTURE</h1>
-                <input type="text" id="nameInput" placeholder="Enter Your Name">
-                <button onclick="generateBoardingPass()">EMBARK</button>
-                <div class="travel-icons">
-                    <span class="travel-icon">✈️</span>
-                    <span class="travel-icon">🚂</span>
-                    <span class="travel-icon">🚢</span>
-                    <span class="travel-icon">🚗</span>
+    <div class="container">
+        <div class="initial-screen" id="initialScreen">
+            <h1>AVYAAN'S ADVENTURE</h1>
+            <input type="text" id="nameInput" placeholder="Enter Your Name">
+            <button onclick="generateBoardingPass()">EMBARK</button>
+        </div>
+        <div class="boarding-pass" id="boardingPass">
+            <div class="flight-info">
+                <div>
+                    <div class="code">HMM</div>
+                    <div class="city">Home</div>
+                    <div class="date">4th Aug, 2024</div>
+                    <div class="time">12:00pm</div>
+                </div>
+                <div class="airplane">
+                    <svg viewBox="0 0 24 24" fill="#1a237e">
+                        <path d="M21 16v-2l-8-5V3.5c0-.83-.67-1.5-1.5-1.5S10 2.67 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z"/>
+                    </svg>
+                </div>
+                <div>
+                    <div class="code">AWL</div>
+                    <div class="city">Avyaan's Wonderland</div>
+                    <div class="date">4th Aug, 2024</div>
+                    <div class="time">04:00pm</div>
                 </div>
             </div>
-            <div class="boarding-pass" id="boardingPass">
-                <div class="flight-info">
-                    <div>
-                        <div class="code">HMM</div>
-                        <div class="city">Home</div>
-                        <div class="date">4th Aug, 2024</div>
-                        <div class="time">12:00pm</div>
-                    </div>
-                    <div class="airplane">
-                        <svg viewBox="0 0 24 24" fill="#1a237e">
-                            <path d="M21 16v-2l-8-5V3.5c0-.83-.67-1.5-1.5-1.5S10 2.67 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z"/>
-                        </svg>
-                    </div>
-                    <div>
-                        <div class="code">AWL</div>
-                        <div class="city">Avyaan's Wonderland</div>
-                        <div class="date">4th Aug, 2024</div>
-                        <div class="time">04:00pm</div>
-                    </div>
-                </div>
-                <div class="passenger-info">
-                    <p><span>Passenger:</span> <span id="passengerName"></span></p>
-                    <p><span>Flight:</span> <span>AJ307</span></p>
-                    <p><span>Terminal:</span> <span>M3M, Golfestate</span></p>
-                    <p><span>Gate:</span> <span>First Floor, VIP Club</span></p>
-                    <p><span>Take off:</span> <span>12:00 PM</span></p>
-                    <p><span>Landing:</span> <span>4:00 PM</span></p>
-                </div>
-                <div class="qr-code" id="qrCode"></div>
-                <div class="directions">
-                    <a href="https://maps.app.goo.gl/e2TM2Nn3EPsovm6Y9" target="_blank">Get Directions</a>
-                </div>
-                <button onclick="editName()">Edit Name</button>
+            <div class="passenger-info">
+                <p><span>Passenger:</span> <span id="passengerName"></span></p>
+                <p><span>Flight:</span> <span>AJ307</span></p>
+                <p><span>Terminal:</span> <span>M3M, Golfestate</span></p>
+                <p><span>Gate:</span> <span>First Floor, VIP Club</span></p>
+                <p><span>Take off:</span> <span>12:00 PM</span></p>
+                <p><span>Landing:</span> <span>4:00 PM</span></p>
             </div>
+            <div id="qrcode"></div>
+            <div class="directions">
+                <a href="https://maps.app.goo.gl/e2TM2Nn3EPsovm6Y9" target="_blank">Get Directions</a>
+            </div>
+            <button onclick="editName()">Edit Name</button>
         </div>
     </div>
 
@@ -236,10 +216,15 @@
         }
 
         function generateQRCode() {
-            var qr = qrcode(0, 'M');
-            qr.addData('https://maps.app.goo.gl/e2TM2Nn3EPsovm6Y9');
-            qr.make();
-            document.getElementById('qrCode').innerHTML = qr.createImgTag(5);
+            document.getElementById('qrcode').innerHTML = '';
+            new QRCode(document.getElementById("qrcode"), {
+                text: "https://maps.app.goo.gl/e2TM2Nn3EPsovm6Y9",
+                width: 128,
+                height: 128,
+                colorDark : "#1a237e",
+                colorLight : "#ffd600",
+                correctLevel : QRCode.CorrectLevel.H
+            });
         }
 
         window.onload = function() {
