--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f0f0f0;
-            background-image: radial-gradient(#1a237e 2px, transparent 2px);
-            background-size: 30px 30px;
+            background-color: #ffffff;
         }
         .container {
             width: 90%;
             max-width: 350px;
             height: 90vh;
-            max-height: 700px;
+            max-height: 600px;
             background-color: #1a237e;
             border-radius: 20px;
             overflow: hidden;
@@ -43,6 +41,8 @@
         .initial-screen {
             background-color: #ffd600;
             color: #1a237e;
+            background-image: radial-gradient(#1a237e 2px, transparent 2px);
+            background-size: 30px 30px;
         }
         .boarding-pass {
             background-color: #ffd600;
@@ -145,12 +145,6 @@
             color: #1a237e;
             text-decoration: none;
             font-weight: bold;
-        }
-        @media (max-height: 700px) {
-            .container {
-                height: 100%;
-                border-radius: 0;
-            }
         }
     </style>
 </head>
