--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             width: 90%;
             max-width: 350px;
             height: 90vh;
-            max-height: 600px;
+            max-height: 700px;
             background-color: #1a237e;
             border-radius: 20px;
             overflow: hidden;
@@ -37,12 +37,13 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            overflow-y: auto;
         }
         .initial-screen {
             background-color: #ffd600;
             color: #1a237e;
-            background-image: radial-gradient(#1a237e 2px, transparent 2px);
-            background-size: 30px 30px;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 60 60'%3E%3Cg fill='%231a237e' fill-opacity='0.1'%3E%3Cpath d='M15 5h2v5h-2zM30 5h2v5h-2zM45 5h2v5h-2zM5 15h5v2H5zM5 30h5v2H5zM5 45h5v2H5zM50 15h5v2h-5zM50 30h5v2h-5zM50 45h5v2h-5zM26 24l4-8 4 8z'/%3E%3Cpath d='M12 29a3 3 0 100-6 3 3 0 000 6zM48 29a3 3 0 100-6 3 3 0 000 6zM30 47a3 3 0 100-6 3 3 0 000 6z'/%3E%3C/g%3E%3C/svg%3E");
+            background-size: 60px 60px;
         }
         .boarding-pass {
             background-color: #ffd600;
