--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             font-size: 32px;
             text-align: center;
             margin-bottom: 40px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+            text-shadow: 2px 2px 4px rgba(26, 35, 126, 0.3);
         }
         input {
             width: 100%;
@@ -66,6 +66,7 @@
             color: #1a237e;
             font-size: 18px;
             font-family: 'Baloo 2', cursive;
+            box-sizing: border-box;
         }
         input::placeholder {
             color: #1a237e80;
