--- a/index.html
+++ b/index.html
@@ -135,9 +135,16 @@
         .passenger-info p span:first-child {
             font-weight: bold;
         }
-        #qrcode {
-            text-align: center;
-            margin-top: 20px;
+       #qrcode {
+        text-align: center;
+        margin: 20px auto;
+        width: 128px;
+        height: 128px;
+        }
+
+        #qrcode img {
+        display: block;
+        margin: 0 auto;
         }
         .directions {
             text-align: center;
