--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                     </svg>
                 </div>
                 <div>
-                    <div class="code">AWL</div>
-                    <div class="city">Avyaan's Wonderland</div>
+                    <div class="code">AOL</div>
+                    <div class="city">Avyaan's Onederland</div>
                     <div class="date">4th Aug, 2024</div>
                     <div class="time">04:00pm</div>
                 </div>
