--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         .flight-info div {
             text-align: center;
             flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         .code {
             font-size: 36px;
