--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
             font-size: 18px;
             font-weight: bold;
         }
+        .date {
+        margin: 0; /* Ensure no extra space is added */
+        }
         .date, .time {
+            margin-bottom: 5px;
             font-size: 14px;
         }
         .airplane {
@@ -173,7 +177,7 @@
                     <div class="code">HMM</div>
                     <div class="city">Home</div>
                     <div class="date">4th Aug, 2024</div>
-                    <div class="time">12:00pm</div>
+                    <div class="time">From: 12:00 PM</div>
                 </div>
                 <div class="airplane">
                     <svg viewBox="0 0 24 24" fill="#1a237e">
@@ -184,7 +188,7 @@
                     <div class="code">AOL</div>
                     <div class="city">Avyaan's Onederland</div>
                     <div class="date">4th Aug, 2024</div>
-                    <div class="time">04:00pm</div>
+                    <div class="time">To: 04:00 PM</div>
                 </div>
             </div>
             <div class="passenger-info">
