--- a/index.html
+++ b/index.html
@@ -104,16 +104,18 @@
         .code {
             font-size: 36px;
             font-weight: bold;
+            margin-bottom: 10px;
         }
         .city {
             font-size: 18px;
             font-weight: bold;
+            margin-bottom: 5px;
         }
         .date {
         margin: 0; /* Ensure no extra space is added */
         }
         .date, .time {
-            margin-bottom: 5px;
+            margin-bottom: 0;
             font-size: 14px;
         }
         .airplane {
@@ -177,7 +179,7 @@
                     <div class="code">HMM</div>
                     <div class="city">Home</div>
                     <div class="date">4th Aug, 2024</div>
-                    <div class="time">From: 12:00 PM</div>
+                    <div class="time">12:00 PM</div>
                 </div>
                 <div class="airplane">
                     <svg viewBox="0 0 24 24" fill="#1a237e">
@@ -188,7 +190,7 @@
                     <div class="code">AOL</div>
                     <div class="city">Avyaan's Onederland</div>
                     <div class="date">4th Aug, 2024</div>
-                    <div class="time">To: 04:00 PM</div>
+                    <div class="time">04:00 PM</div>
                 </div>
             </div>
             <div class="passenger-info">
