--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <button onclick="generateBoardingPass()">EMBARK</button>
         </div>
         <div class="boarding-pass" id="boardingPass">
-            <<div class="flight-info">
+            <div class="flight-info">
     <div>
         <div class="code">HMM</div>
         <div class="city">Home</div>
