--- a/index.html
+++ b/index.html
@@ -90,9 +90,16 @@
         }
         .flight-info {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
+        }
+        .flight-info .location {
+        text-align: center;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         }
         .flight-info div {
             text-align: center;
@@ -103,13 +110,13 @@
         }
         .code {
             font-size: 36px;
-            font-weight: bold;
-            margin-bottom: 10px;
+    font-weight: bold;
+    margin-bottom: 5px;
         }
         .city {
             font-size: 18px;
-            font-weight: bold;
-            margin-bottom: 5px;
+    font-weight: bold;
+    margin-bottom: 5px;
         }
         .date {
         font-size: 16px;
@@ -117,11 +124,15 @@
         margin-bottom: 5px;
         }
         .date, .time {
-            margin: 10px 0;
-            font-size: 14px;
+            text-align: center;
+    margin: 10px 0;
+    font-size: 16px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
         }
         .time {
-        font-size: 16px;
         margin: 0;
         }
         .airplane {
@@ -181,24 +192,24 @@
         </div>
         <div class="boarding-pass" id="boardingPass">
             <div class="flight-info">
-    <div>
+    <div class="location">
         <div class="code">HMM</div>
         <div class="city">Home</div>
     </div>
     <div class="airplane">
         <svg viewBox="0 0 24 24" fill="#1a237e">
             <path d="M21 16v-2l-8-5V3.5c0-.83-.67-1.5-1.5-1.5S10 2.67 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z"/>
-    </svg>
+        </svg>
     </div>
-        <div>
+    <div class="location">
         <div class="code">AOL</div>
         <div class="city">Avyaan's Onederland</div>
     </div>
-    </div>
-    <div class="date-time">
+</div>
+<div class="date-time">
     <div class="date">4th Aug, 2024</div>
     <div class="time">12:00 PM to 04:00 PM</div>
-    </div>
+</div>
             <div class="passenger-info">
                 <p><span>Passenger:</span> <span id="passengerName"></span></p>
                 <p><span>Flight:</span> <span>AJ307</span></p>
